@@ -19,6 +19,8 @@ version 1.7.7, in progress
   avoid name collisions across series, scalars, matrices, etc.
 - VARs in saved sessions: ensure that we save the information
   needed for subsequent bootstrap analyses
+- Fix the mechanism for searching for a user's customized
+  LaTeX preamble file (got broken at some point)
 
 7/30/2008 version 1.7.6
 - Fix bug: revise the way that list arguments to user-defined
